Update client-side public resources
Update theme-color.
Update description.
Add apple-mobile-web-app-status-bar-style.
(See https://www.gowest1.com/misc/change-smart-device-appearance.html)

Update manifest.json.

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TL Web",
+  "name": "TeX Live Web",
   "icons": [
     {
       "src": "favicon.svg",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#1179b6",
   "background_color": "#ffffff"
 }
